# uwuivy

./: README.md  pyproject.toml
uwuivy/: __main__.py  uwuipy.py
